--- a/index.html
+++ b/index.html
@@ -1,9 +1,100 @@
 <!DOCTYPE html>
-<html>
-<head><title>Peakly Support</title></head>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Peakly - 나를 위한 약효 흐름 & 목표 관리</title>
+    <style>
+        :root {
+            --primary-color: #007AFF;
+            --text-color: #333;
+            --bg-color: #f5f5f7;
+        }
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            line-height: 1.6;
+            color: var(--text-color);
+            background-color: var(--bg-color);
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 40px 20px;
+        }
+        header {
+            text-align: center;
+            margin-bottom: 60px;
+        }
+        h1 { font-size: 2.5rem; margin-bottom: 10px; color: #000; }
+        .tagline { font-size: 1.2rem; color: #666; }
+        section {
+            background: #fff;
+            padding: 30px;
+            border-radius: 20px;
+            margin-bottom: 30px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.05);
+        }
+        h2 { color: var(--primary-color); border-bottom: 2px solid #eee; padding-bottom: 10px; }
+        h3 { margin-top: 25px; color: #444; }
+        ul { padding-left: 20px; }
+        li { margin-bottom: 10px; }
+        footer {
+            text-align: center;
+            margin-top: 60px;
+            color: #888;
+            font-size: 0.9rem;
+        }
+        .contact { color: var(--primary-color); text-decoration: none; }
+    </style>
+</head>
 <body>
-    <h1>하이퍼포커스 랩 - Peakly</h1>
-    <p>이곳은 피클리의 공식 지원 페이지입니다.</p>
-    <p>문의사항: hyperfocuslab3813@gmail.com</p>
+    <div class="container">
+        <header>
+            <h1>Peakly (피클리)</h1>
+            <p class="tagline">나에게 약을 맞추는 시간, 더 나은 나를 만드는 기록</p>
+        </header>
+
+        <section>
+            <h2>피클리를 만든 이유</h2>
+            <p>피클리는 제가 직접 필요해서 만든 앱입니다. 약효를 단순한 '느낌'이 아니라 객관적인 '흐름'으로 관리하고 싶었습니다.</p>
+            <ul>
+                <li>지금 상태가 약효 때문인지, 단순 컨디션인지 구분하고 싶었습니다.</li>
+                <li>약동학 모델을 기반으로 현재 약효가 피크인지, 감소 구간인지 그래프로 시각화했습니다.</li>
+                <li>차트를 보지 않아도 알림을 통해 현재 상태를 파악하고 복용 시간을 조절할 수 있습니다.</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>약효와 신체 데이터의 연결</h2>
+            <p>같은 약이라도 수면과 활동량에 따라 체감 효과는 달라집니다.</p>
+            <ul>
+                <li>수면, 활동량, 운동 데이터를 연동하여 약효와의 상관관계를 분석합니다.</li>
+                <li>심박수 변화 등 신체 반응을 기록하여 약효를 다각도로 이해할 수 있게 돕습니다.</li>
+                <li>데이터가 쌓일수록 나만의 최적화된 복용 리듬을 찾을 수 있습니다.</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>ADHD를 위해 덜어낸 관리 구조</h2>
+            <p>복잡한 투두 앱 대신, ADHD 사용자에게 꼭 필요한 본질적인 흐름에만 집중했습니다.</p>
+            <ul>
+                <li>목표 설정 → 하루 단위 분할 → 실행으로 이어지는 간결한 구조입니다.</li>
+                <li>끝내지 못한 일은 자동으로 다음 날로 이동하여 심리적 부담을 줄였습니다.</li>
+                <li>마감 임박 일과 반복 루틴을 앱이 대신 기억하고 챙겨줍니다.</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>역할과 비전</h2>
+            <p>피클리는 약에 나를 맞추는 도구가 아니라, <strong>나에게 약을 맞출 수 있도록 돕는 도구</strong>가 되고자 합니다. ADHD 사용자는 물론, 삶을 더 체계적으로 관리하고 싶은 모든 분께 도움이 되기를 바랍니다.</p>
+        </section>
+
+        <footer>
+            <p>© 2026 하이퍼포커스 랩 (Hyperfocus Lab). All rights reserved.</p>
+            <p>문의: <a href="mailto:hyperfocuslab3813@gmail.com" class="contact">hyperfocuslab3813@gmail.com</a></p>
+        </footer>
+    </div>
 </body>
 </html>
